test/Fail/Issue2997.err
Issue2997.agda:6.1-12.15: error: [TerminationIssue]
Termination checking failed for the following functions:
  T
Problematic calls:
  T (at Issue2997.agda:9.11-12)

Issue2997.agda:15.4-12: error: [SplitError.NotADatatype]
Cannot split on argument of non-datatype T
when checking that the pattern c₁ (c₂ x) has type T
